# MyClipboard

./: .gitignore  LICENSE  README.md  app-home.py  install.sh  mcb.py  myclipboard.service  pyproject.toml  requirements.txt
app/: __init__.py  main.py  service.py  sync.py
docs/enterprise/: alpha_release_notes.md  audit_v1.md  completion_report.md  ui_upgrade.md
docs/enterprise/adr/: adr-005-sync.md
docs/enterprise/prd/: final_completion.md
tests/: test_concurrency.py  test_security.py  test_service.py
